Refactor FridgeStockRepositoryTest to improve structure and add tests for barcode retrieval methods