@@ -1,209 +1,153 @@
 package ch.primeo.fridgely.service;
 
-import ch.primeo.fridgely.model.FridgeStock;
 import ch.primeo.fridgely.model.QFridgeStock;
+import com.querydsl.jpa.impl.JPAQuery;
 import com.querydsl.jpa.impl.JPAQueryFactory;
 import jakarta.persistence.EntityManager;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.MockedConstruction;
+import org.mockito.Mockito;
+import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
+@ExtendWith(MockitoExtension.class)
 class FridgeStockRepositoryTest {
 
-
-   /* @Mock
-    private FridgeStockJpaRepository fridgeStockJpaRepositoryMock;
+    @Mock
+    private EntityManager entityManager;
 
     @Mock
-    private EntityManager entityManagerMock;
+    private JPAQuery<String> jpaQuery; // Mock for the query object itself
 
-    @Mock
-    private JPAQueryFactory queryFactoryMock;
+    // FridgeStockRepository instance will be created within tests where needed,
+    // especially when using MockedConstruction.
 
-    private FridgeStockRepository fridgeStockRepository;
+    @Test
+    void constructor_initializesJpaQueryFactory() {
+        try (MockedConstruction<JPAQueryFactory> mockedFactoryConstruction = Mockito.mockConstruction(JPAQueryFactory.class,
+                (mock, context) -> {
+                    // Assert that the constructor of JPAQueryFactory was called with the mocked EntityManager
+                    assertEquals(1, context.arguments().size(), "JPAQueryFactory constructor should have 1 argument");
+                    assertSame(entityManager, context.arguments().get(0), "JPAQueryFactory should be constructed with the provided EntityManager");
+                })) {
 
-    @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
-        fridgeStockRepository = new FridgeStockRepository(fridgeStockJpaRepositoryMock, entityManagerMock);
+            FridgeStockRepository repository = new FridgeStockRepository(entityManager);
+            assertNotNull(repository, "Repository instance should not be null");
+            // Verify that one JPAQueryFactory was indeed constructed
+            assertEquals(1, mockedFactoryConstruction.constructed().size(), "One JPAQueryFactory instance should have been constructed");
+        }
     }
 
     @Test
-    void testAddProductsToStock_Success() {
-        // Arrange
-        List<String> barcodes = List.of("123", "456");
-        when(fridgeStockJpaRepositoryMock.saveAll(any())).thenReturn(null);
+    void getAllBarcodesInStock_noBarcodes() {
+        // Configure the chained calls on the jpaQuery mock
+        when(jpaQuery.from(QFridgeStock.fridgeStock)).thenReturn(jpaQuery);
+        when(jpaQuery.distinct()).thenReturn(jpaQuery);
+        when(jpaQuery.fetch()).thenReturn(Collections.emptyList());
 
-        // Act
-        boolean result = fridgeStockRepository.addProductsToStock(barcodes);
+        try (MockedConstruction<JPAQueryFactory> mockedFactoryConstruction = Mockito.mockConstruction(JPAQueryFactory.class,
+                (constructedMockFactory, context) -> {
+                    // When FridgeStockRepository's constructor creates a JPAQueryFactory,
+                    // this constructedMockFactory will be used.
+                    // Configure its 'select' method to return our @Mock jpaQuery.
+                    when(constructedMockFactory.select(QFridgeStock.fridgeStock.barcode)).thenReturn(jpaQuery);
+                })) {
 
-        // Assert
-        assertTrue(result);
-        verify(fridgeStockJpaRepositoryMock, times(1)).saveAll(any());
+            FridgeStockRepository repository = new FridgeStockRepository(entityManager);
+            List<String> barcodes = repository.getAllBarcodesInStock();
+
+            assertNotNull(barcodes, "Returned list should not be null");
+            assertTrue(barcodes.isEmpty(), "Returned list should be empty");
+
+            // Verify 'select' was called on the constructed JPAQueryFactory instance
+            JPAQueryFactory factoryInstance = mockedFactoryConstruction.constructed().get(0);
+            verify(factoryInstance).select(QFridgeStock.fridgeStock.barcode);
+
+            // Verify the rest of the chain on our @Mock jpaQuery
+            verify(jpaQuery).from(QFridgeStock.fridgeStock);
+            verify(jpaQuery).distinct();
+            verify(jpaQuery).fetch();
+        }
     }
 
     @Test
-    void testAddProductsToStock_EmptyList() {
-        // Arrange
-        List<String> barcodes = List.of();
+    void getAllBarcodesInStock_withBarcodes() {
+        List<String> expectedBarcodes = Arrays.asList("123", "456", "789");
 
-        // Act
-        boolean result = fridgeStockRepository.addProductsToStock(barcodes);
+        // Configure the chained calls on the jpaQuery mock
+        when(jpaQuery.from(QFridgeStock.fridgeStock)).thenReturn(jpaQuery);
+        when(jpaQuery.distinct()).thenReturn(jpaQuery);
+        when(jpaQuery.fetch()).thenReturn(expectedBarcodes);
 
-        // Assert
-        assertTrue(result);
-        verify(fridgeStockJpaRepositoryMock, never()).saveAll(any());
+        try (MockedConstruction<JPAQueryFactory> mockedFactoryConstruction = Mockito.mockConstruction(JPAQueryFactory.class,
+                (constructedMockFactory, context) -> {
+                    when(constructedMockFactory.select(QFridgeStock.fridgeStock.barcode)).thenReturn(jpaQuery);
+                })) {
+
+            FridgeStockRepository repository = new FridgeStockRepository(entityManager);
+            List<String> actualBarcodes = repository.getAllBarcodesInStock();
+
+            assertNotNull(actualBarcodes, "Returned list should not be null");
+            assertEquals(expectedBarcodes.size(), actualBarcodes.size(), "List size should match expected");
+            assertEquals(expectedBarcodes, actualBarcodes, "List content should match expected");
+
+            JPAQueryFactory factoryInstance = mockedFactoryConstruction.constructed().get(0);
+            verify(factoryInstance).select(QFridgeStock.fridgeStock.barcode);
+            verify(jpaQuery).from(QFridgeStock.fridgeStock);
+            verify(jpaQuery).distinct();
+            verify(jpaQuery).fetch();
+        }
     }
 
     @Test
-    void testAddProductToStock_Success() {
-        // Arrange
-        String barcode = "123";
-        doReturn(true).when(fridgeStockRepository).addProductsToStock(List.of(barcode));
+    void getAllBarcodesInStockAsSet_emptyList() {
+        // For this method, we spy on FridgeStockRepository to mock the call to getAllBarcodesInStock()
+        FridgeStockRepository spiedRepository = spy(new FridgeStockRepository(entityManager));
+        doReturn(Collections.emptyList()).when(spiedRepository).getAllBarcodesInStock();
 
-        // Act
-        boolean result = fridgeStockRepository.addProductToStock(barcode);
+        Set<String> barcodesSet = spiedRepository.getAllBarcodesInStockAsSet();
 
-        // Assert
-        assertTrue(result);
+        assertNotNull(barcodesSet, "Returned set should not be null");
+        assertTrue(barcodesSet.isEmpty(), "Returned set should be empty");
+        verify(spiedRepository).getAllBarcodesInStock(); // Verify the mocked method was called
     }
 
     @Test
-    void testAddProductToStock_InvalidBarcode() {
-        // Arrange
-        String barcode = "";
+    void getAllBarcodesInStockAsSet_uniqueBarcodes() {
+        FridgeStockRepository spiedRepository = spy(new FridgeStockRepository(entityManager));
+        List<String> uniqueList = Arrays.asList("123", "456", "789");
+        doReturn(uniqueList).when(spiedRepository).getAllBarcodesInStock();
 
-        // Act
-        boolean result = fridgeStockRepository.addProductToStock(barcode);
+        Set<String> barcodesSet = spiedRepository.getAllBarcodesInStockAsSet();
 
-        // Assert
-        assertFalse(result);
-    }
-
-//    @Test
-//    void testRemoveProductsFromStock_Success() {
-//        // Arrange
-//        List<String> barcodes = List.of("123", "456");
-//        when(queryFactoryMock.delete(QFridgeStock.fridgeStock)).thenReturn(queryFactoryMock);
-//        when(queryFactoryMock.where(any())).thenReturn(queryFactoryMock);
-//
-//        // Act
-//        boolean result = fridgeStockRepository.removeProductsFromStock(barcodes);
-//
-//        // Assert
-//        assertTrue(result);
-//        verify(queryFactoryMock, times(1)).delete(QFridgeStock.fridgeStock);
-//    }
-
-    @Test
-    void testRemoveProductsFromStock_EmptyList() {
-        // Arrange
-        List<String> barcodes = List.of();
-
-        // Act
-        boolean result = fridgeStockRepository.removeProductsFromStock(barcodes);
-
-        // Assert
-        assertTrue(result);
-        verify(queryFactoryMock, never()).delete(any());
+        assertNotNull(barcodesSet, "Returned set should not be null");
+        assertEquals(3, barcodesSet.size(), "Set size should be 3");
+        assertTrue(barcodesSet.containsAll(uniqueList), "Set should contain all unique elements");
+        verify(spiedRepository).getAllBarcodesInStock();
     }
 
     @Test
-    void testRemoveProductFromStock_Success() {
-        // Arrange
-        String barcode = "123";
-        doReturn(true).when(fridgeStockRepository).removeProductsFromStock(List.of(barcode));
+    void getAllBarcodesInStockAsSet_duplicateBarcodes() {
+        FridgeStockRepository spiedRepository = spy(new FridgeStockRepository(entityManager));
+        List<String> duplicateList = Arrays.asList("123", "456", "123", "789", "456");
+        Set<String> expectedSet = new HashSet<>(Arrays.asList("123", "456", "789"));
+        doReturn(duplicateList).when(spiedRepository).getAllBarcodesInStock();
 
-        // Act
-        boolean result = fridgeStockRepository.removeProductFromStock(barcode);
+        Set<String> barcodesSet = spiedRepository.getAllBarcodesInStockAsSet();
 
-        // Assert
-        assertTrue(result);
+        assertNotNull(barcodesSet, "Returned set should not be null");
+        assertEquals(3, barcodesSet.size(), "Set size should be 3 after deduplication");
+        assertEquals(expectedSet, barcodesSet, "Set content should match expected unique elements");
+        verify(spiedRepository).getAllBarcodesInStock();
     }
-
-    @Test
-    void testRemoveProductFromStock_InvalidBarcode() {
-        // Arrange
-        String barcode = "";
-
-        // Act
-        boolean result = fridgeStockRepository.removeProductFromStock(barcode);
-
-        // Assert
-        assertFalse(result);
-    }
-
-    @Test
-    void testIsProductInStock_ProductExists() {
-        // Arrange
-        String barcode = "123";
-        when(fridgeStockJpaRepositoryMock.existsById(barcode)).thenReturn(true);
-
-        // Act
-        boolean result = fridgeStockRepository.isProductInStock(barcode);
-
-        // Assert
-        assertTrue(result);
-    }
-
-    @Test
-    void testIsProductInStock_ProductDoesNotExist() {
-        // Arrange
-        String barcode = "123";
-        when(fridgeStockJpaRepositoryMock.existsById(barcode)).thenReturn(false);
-
-        // Act
-        boolean result = fridgeStockRepository.isProductInStock(barcode);
-
-        // Assert
-        assertFalse(result);
-    }
-
-//    @Test
-//    void testGetAllBarcodesInStock() {
-//        // Arrange
-//        List<String> barcodes = List.of("123", "456");
-//        when(queryFactoryMock.select(QFridgeStock.fridgeStock.barcode)).thenReturn(queryFactoryMock);
-//        when(queryFactoryMock.from(QFridgeStock.fridgeStock)).thenReturn(queryFactoryMock);
-//        when(queryFactoryMock.fetch()).thenReturn(barcodes);
-//
-//        // Act
-//        List<String> result = fridgeStockRepository.getAllBarcodesInStock();
-//
-//        // Assert
-//        assertEquals(barcodes, result);
-//    }
-
-    @Test
-    void testGetAllBarcodesInStockAsSet() {
-        // Arrange
-        Set<String> barcodes = Set.of("123", "456");
-        doReturn(List.copyOf(barcodes)).when(fridgeStockRepository).getAllBarcodesInStock();
-
-        // Act
-        Set<String> result = fridgeStockRepository.getAllBarcodesInStockAsSet();
-
-        // Assert
-        assertEquals(barcodes, result);
-    }
-
-//    @Test
-//    void testClearStock_Success() {
-//        // Arrange
-//        when(queryFactoryMock.delete(QFridgeStock.fridgeStock)).thenReturn(queryFactoryMock);
-//
-//        // Act
-//        boolean result = fridgeStockRepository.clearStock();
-//
-//        // Assert
-//        assertTrue(result);
-//        verify(queryFactoryMock, times(1)).delete(QFridgeStock.fridgeStock);
-//    }*/
 }
